--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
+    "outDir": "Code/JavaScript"
     "lib": ["es6"],
     "sourceMap": true,
 	"moduleResolution": "Node"
