add status channel

--- a/Code/config.json
+++ b/Code/config.json
@@ -2,6 +2,7 @@
     "token": "",
     "prefix": "-",
     "ownerID": "211521218896068609",
+    "statuschannel": "channelid",
     "status": "-help",
     "botname": "SaltBot"
 }
